src/components/Navigation/components/NavigationSectionItem.less
@import (reference) '~css/typography';

:local {
    .item {
        .body-regular();
        width: 100%;
        height: 28px;
        padding: 4px 12px;
        color: var(--navigation-text-item);
        border-radius: 8px;
        border: 1px solid transparent;
        text-overflow: ellipsis;
        overflow: hidden;
        white-space: nowrap;

        &:hover {
            outline: none;
            background: var(--navigation-background-accent);
            color: var(--navigation-text-item);
        }

        &:focus {
            outline: none;
            background: var(--navigation-background-accent);
            color: var(--navigation-text-item);
        }

        &[aria-current='page']:not(:hover),
        &[data-selected='true']:not(:hover) {
            .body-semibold();
            background: var(--navigation-border);
            border: 1px solid var(--navigation-selected);
            color: var(--navigation-title-item);
        }

        &[data-display-type='indent'] {
            margin-left: var(--layout-spacing-xs);
            width: calc(100% - var(--layout-spacing-xs));
        }
    }
}

